--- a/404.html
+++ b/404.html
@@ -5,8 +5,8 @@
 <title>Li Yao</title>
 </head>
 <script language=javascript>
-if (document.domain =='www.liyaopro.com')
-this.location = "http://www.liyao.app" + this.location.pathname + this.location.search;
+if (document.domain =='www.31lee.com')
+this.location = "http://www.lee31.cn" + this.location.pathname + this.location.search;
 </script>
 <body>
  <h1></h1>
