--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Li Yao</title>
 </head>
 <script language=javascript>
-if (document.domain =='www.31lee.com')
+if (document.domain=='31lee.com' || document.domain=='www.31lee.com')
 this.location = "http://www.lee31.cn" + this.location.pathname + this.location.search;
 </script>
 <body>
